LIST OF CHANGES

 - Update URL for production Sequencescape LIMS

release 91.0.0
 - modified is_i5opposite when there is no reverse read
 - removed scripts for monitoring instruments via ftp; related
   modules and methods, their tests and test data are removed
 - code for staging monitor reorganised so that the Monitor::Runfolder
   class has methods for updating run, run_lane records and run tags
   and the Monitor::Runfolder::Staging class mainly deals with staging
   folder inspection and changes; some methods renamed to remove
   ambiguity about their functionality
 - some of the functionality of the instrument monitor is incorporated
   into the staging monitor script code, namely, (1) setting 'multiplex',
   'paired_read' and 'single_read' tags and (2) deletion of superfluous
   lanes; this functionality is now available for NovaSeq instruments,
   while previously it was missing for this instrument type
 - redundant 'rta' run tag is not longer set
 - redundant Mirror.completed file is no longer created in the run
   folder
 - functionality for checking instruments' wash status and setting
   'was required' instrument tag is lost; this shoud be done outside
   of staging monitor
 - npg_tracking::util::pipeline_config:
     move bqsr and haplotype caller to a tertiary section which can be
     set specifically by reference or by using a default study config;
     restrict access to attributes which should not be set by the caller
     (local_bin, product_config);
     enable setting product release configuration file path via the
     new product_conf_file_path attribute
 - genome reference hierarchy in the current samplesheet is not compatible with
   the latest version of MiSeq Illumina software; setting Workflow value to
   GenerateFastQ prevents the instrument's software from using this value,
   hence we can stop setting genome reference path altogether
 - make impossible to download cbcl file via tracking web pages