@@ -1,5 +1,6 @@
 LIST OF CHANGES
 
+ - staging area daemon if the folder_name is not the DB validate the id_run before updating the DB
  - Update URL for production Sequencescape LIMS
 
 release 91.0.0
